[build-system]
requires = ["wheel", "setuptools>=59", "Cython", "cython-setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name="yappcap"
version="0.0.1"
requires-python='>=3'
classifiers=[  # Optional
    "Development Status :: 4 - Beta",
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    ]
dependencies = [ "Cython" ]

[project.urls]
    "Homepage" = "https://github.com/asterisk/yappcap"


