[build-system]
requires = ["wheel", "setuptools>=59", "Cython==0.29.37", "cython-setuptools==0.2.3" ]
build-backend = "setuptools.build_meta"

[project]
name="yappcap"
version="0.0.4"
requires-python='>=3'
classifiers=[  # Optional
    "Development Status :: 4 - Beta",
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    ]
dependencies = [ "Cython==0.29.37" ]

[project.urls]
    "Homepage" = "https://github.com/asterisk/yappcap"


